# jisho_ing_rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
