[package]
name = "jisho_ing"
version = "0.1.0"
authors = ["wanghe9 <wanghe9@vipkid.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
simple-xml-builder = "1.0.0"